# verbose-happiness

./: CMakeLists.txt  CppTrainingConfig.h.in  LICENSE  func.cpp  func.h  working.cpp
